--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="white-box box">
           <h2 class="join">Что сейчас в моде?</h2>
           <h3 class="thirty-day">Корона-вирус это главный модный тренд 2020 года! Не отставайте!</h3>
-          <p class="join-p">Мы поможем Вам не отставать от моды и заразиться корона-вирусом!. Качественно и с гарантией, мы инфецируем Вас и Вашу семью COVID-19!</p>
+          <p class="join-p">Мы поможем Вам не отставать от моды и заразиться корона-вирусом!... Качественно и с гарантией, мы инфецируем Вас и Вашу семью COVID-19!</p>
       </div>
 
       <div class="dark-box box">
